Fix email-type field error overflowing

--- a/frontend/src/components/forms/FormField.module.scss
+++ b/frontend/src/components/forms/FormField.module.scss
@@ -25,4 +25,6 @@
   path {
     fill: $COLOR_RASPBERRY;
   }
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
